[package]
name = "quake"
description = "Testnet management and e2e testing tool for Malachite Chains"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "quake"
path = "src/main.rs"

[dependencies]

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["ws"] }
alloy-rpc-types-admin = { workspace = true }
alloy-rpc-types-txpool = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport-ws = { workspace = true }
arc-checks = { workspace = true }
arc-consensus-types = { workspace = true }
arc-mesh-analysis = { workspace = true }
arc-node-consensus = { workspace = true }
arc-node-consensus-cli = { workspace = true }
arc-version = { workspace = true }
axum = { workspace = true }
backon = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
color-eyre = { workspace = true }
deranged = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
handlebars = "4.5"
hex = { workspace = true }
humantime.workspace = true
indexmap = { workspace = true, features = ["serde"] }
inventory = "0.3"
itertools = { workspace = true }
k256 = { workspace = true }
lz4 = { workspace = true }
malachitebft-config = { workspace = true }
once_cell = { workspace = true }
pathdiff = "0.2"
quake-macros = { path = "macros" }
rand = { workspace = true }
regex = "1.11.2"
reqwest = { workspace = true }
reth-network-peers = { workspace = true, features = ["secp256k1"] }
rmcp = { workspace = true }
schemars = { workspace = true }
secp256k1 = { workspace = true, features = ["rand"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spammer = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
bytesize = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
