[package]
name = "arc-snapshots"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "arc_snapshots"
path = "src/lib.rs"

[[bin]]
name = "arc-snapshots"
path = "src/main.rs"

[dependencies]
arc-version.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
directories.workspace = true
eyre.workspace = true
lz4.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
wiremock.workspace = true

[lints]
workspace = true
