[package]
name = "arc-consensus-types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["signer-local"]
arbitrary = ["dep:arbitrary"]
signer-local = ["dep:malachitebft-signing-ed25519"]

[dependencies]

# alloy
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"], default-features = false }
alloy-rpc-types-engine = { workspace = true, features = ["ssz"] }

# others
arbitrary = { workspace = true, optional = true }
bytes = { workspace = true }
bytesize = { workspace = true }
config = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
eyre = { workspace = true }
humantime-serde = { workspace = true }

# malachitebft
malachitebft-app = { workspace = true }
malachitebft-app-channel = { workspace = true }
malachitebft-codec = { workspace = true }
malachitebft-core-consensus = { workspace = true }
malachitebft-core-types = { workspace = true, features = ["serde"] }
malachitebft-proto = { workspace = true }
malachitebft-signing = { workspace = true }
malachitebft-signing-ed25519 = { workspace = true, optional = true, features = ["rand", "serde"] }
malachitebft-sync = { workspace = true }

prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_with = { workspace = true, features = ["macros", "base64"] }
sha3 = { workspace = true }
signature = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
arc-signer = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
