[package]
name = "arc-version"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[build-dependencies]
chrono = { workspace = true }
dotenvy = { workspace = true }
vergen-git2 = { workspace = true, default-features = false, features = ["build"] }

[lints]
workspace = true
