[package]
name = "arc-checks"
description = "Reusable health checks for Arc networks"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy-provider = { workspace = true, features = ["txpool-api"] }
alloy-rpc-types-txpool = { workspace = true }
arc-consensus-db = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
prometheus-parse = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
